--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tpps_project
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.show-sql=true
-server.port=8081
+server.port=8080
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
