--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 server.port=8080
 
+spring.security.user.name=user
+spring.security.user.password=user
+
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
