Added Security, for all records in db for UserWithPass entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 server.port=8080
 
-spring.security.user.name=user
-spring.security.user.password=user
+#spring.security.user.name=user
+#spring.security.user.password=user
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
